<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main_png"
        tools:context=".permission.PermissionDetailActivity">

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/about_permissions"
            android:textColor="@color/text_soft_white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="18dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvAbout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_bold"
                                android:text="@string/internet"
                                android:textAllCaps="false"
                                android:textColor="@color/text_dialogs"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_regular"
                                android:text="@string/this_permission_deals_with_internet_related_tasks"
                                android:textColor="@color/text_dialogs"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <View
                            android:layout_width="330dp"
                            android:layout_height="0.8dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/gradient_start" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/raleway_bold"
                                android:text="@string/access_coarse_location"
                                android:textColor="@color/text_dialogs"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_regular"
                                android:text="@string/allows_the_api_to_use_wifi_or_mobile_cell_data_or_both_to_determine_the_device_s_location_the_api_returns_the_location_with_an_accuracy_approximately_equivalent_to_a_city_block"
                                android:textColor="@color/text_dialogs"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <View
                            android:layout_width="330dp"
                            android:layout_height="0.8dp"
                            android:layout_marginBottom="20dp"
                            android:background="@color/gradient_start" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:fontFamily="@font/raleway_bold"
                                android:text="@string/access_fine_location"
                                android:textColor="@color/text_dialogs"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_regular"
                                android:text="@string/in_order_to_use_wi_fi_p2p_for_files_sharing_official_android_documentation_suggests_to_add_this_permission_for_connection"
                                android:textColor="@color/text_dialogs"
                                android:textSize="12sp" />

                            <View
                                android:layout_width="330dp"
                                android:layout_height="0.8dp"
                                android:layout_marginBottom="20dp"
                                android:background="@color/gradient_start" />

                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:id="@+id/btnGrant"
                    android:layout_margin="20dp"
                    android:background="@drawable/bg_button_blue"
                    android:text="@string/grant_all"
                    android:textColor="@color/text_soft_white"
                    android:fontFamily="@font/raleway_bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>